# rust-catfish

./: Cargo.toml  README.md
src/: error.rs  lib.rs
test/: example.sgr
